# FormalLangPrac1

./: .coverage  README.md  cobertura.xml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
tests/: ans1.json  test.py  test1.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test2.json  test20.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
